# gateway-host-service

./: CMakeLists.txt  main.cpp
src/database/: database_manager.cpp  databasemanager.cpp
src/services/edge_gateway/: edge_gateway.cpp  edge_gateway.h
